# FL4HMA

./: README.md  aphro_experiment_suite.ipynb  aphro_rdm_sparse.ipynb  aphro_station_sparse_precip.ipynb  aphro_station_sparse_tave.ipynb  federated_sparse_cifar10_note.tex  pyproject.toml  run_federated_example.py  run_sparse_example.py
examples/: __init__.py  cifar10_sparse_demo.ipynb  federated_sparse_cifar10.py  federated_sparse_cifar10_demo.ipynb  sparse_cifar10_example.py  sparse_pixel_example.py
src/fl4hma/: __init__.py
src/fl4hma/core/: __init__.py
src/fl4hma/data/: create.py  dataset.py  dataset_v2.py
src/fl4hma/models/: __init__.py  unet.py
src/fl4hma/utils/: fed_utils.py
station_data/: station_visual.ipynb
tests/: test_create.py  test_datasets.py
