[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl4hma"
version = "0.1.0"
description = "Federated Learning for High Mountain Asia"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "numpy",
    "pandas", 
    "scikit-learn",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
examples = [
    "torch>=1.12.0",
    "torchvision>=0.13.0", 
    "matplotlib>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fl4hma*"]